hard-gists/a61918cbfae993b68eb17b5b780b7e32/run.log
=== Docker Run Log for a61918cbfae993b68eb17b5b780b7e32 ===
Started at: Mi 29. Okt 19:05:23 CET 2025

[2025-10-29 19:05:24] START: Running container for a61918cbfae993b68eb17b5b780b7e32
[2025-10-29 19:05:24] SUCCESS: Container 684a86090729d2bb80891e28adefe35b3f9e9cb6aa256cb55e4e7612e77da9a9 started for a61918cbfae993b68eb17b5b780b7e32
=== Container logs for a61918cbfae993b68eb17b5b780b7e32 ===
  File "/snippet.py", line 55
    print "RMSE " + str(sqrt(score))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a61918cbfae993b68eb17b5b780b7e32 ===
[2025-10-29 19:05:26] INFO: Container 684a86090729d2bb80891e28adefe35b3f9e9cb6aa256cb55e4e7612e77da9a9 has stopped
